[package]
name = "carboxyl_window"
version = "0.0.1"
authors = ["Eduard Bopp <eduard.bopp@aepsil0n.de>"]
description = "Functional reactive window API"
homepage = "https://github.com/aepsil0n/carboxyl_window"
repository = "https://github.com/aepsil0n/carboxyl_window"
readme = "README.md"
keywords = ["frp", "reactive", "event", "window"]
license = "LGPL-3.0+"


[dependencies]
carboxyl = "*"
image = "*"
clock_ticks = "*"

[dependencies.pistoncore-input]
git = "https://github.com/PistonDevelopers/input"

[dependencies.pistoncore-window]
git = "https://github.com/PistonDevelopers/window"


[dev-dependencies]
glutin = "*"

[dev-dependencies.shader_version]
git = "https://github.com/PistonDevelopers/shader_version"

[dev-dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window"

[dev-dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics"

[dev-dependencies.glium]
default-features = false

[dev-dependencies.piston2d-glium_graphics]
git = "https://github.com/PistonDevelopers/glium_graphics"

[dev-dependencies.elmesque]
git = "https://github.com/mitchmindtree/elmesque"
