[package]
name = "carboxyl_window"
version = "0.0.1"
authors = ["Eduard Bopp <eduard.bopp@aepsil0n.de>"]
description = "Functional reactive window API"
homepage = "https://github.com/aepsil0n/carboxyl_window"
repository = "https://github.com/aepsil0n/carboxyl_window"
readme = "README.md"
keywords = ["frp", "reactive", "event", "window"]
license = "LGPL-3.0+"

[dependencies]
carboxyl = "0.1"
image = "0.3"
clock_ticks = "0.0.5"
pistoncore-input = "0.1"
pistoncore-window = "0.1"

[dev-dependencies]
glutin = "0.1"
shader_version = "0.1"
pistoncore-glutin_window = "0.1"
piston2d-graphics = "0.1"
piston2d-glium_graphics = "0.1"
elmesque = "0.1"
glium = "0.5"
