[package]
name = "carboxyl_window"
version = "0.0.1"
authors = ["Eduard Bopp <eduard.bopp@aepsil0n.de>"]
description = "Functional reactive window API"
homepage = "https://github.com/aepsil0n/carboxyl_window"
repository = "https://github.com/aepsil0n/carboxyl_window"
readme = "README.md"
keywords = ["frp", "reactive", "event", "window"]
license = "LGPL-3.0+"

[dependencies]
carboxyl = "0.1"
image = "0.6"
clock_ticks = "0.1"
pistoncore-input = "0.8"
pistoncore-window = "0.14"

[dev-dependencies]
glutin = "0.4"
shader_version = "0.2"
pistoncore-glutin_window = "0.20"
piston2d-graphics = "0.13"
piston2d-glium_graphics = "0.19"
elmesque = "0.12"
glium = "0.13"
